; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_dither.c_makeuniform.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_dither.c_makeuniform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctx = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ctx*)* @makeuniform to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @makeuniform(%struct.ctx* %0) #0 {
  %2 = alloca %struct.ctx*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.ctx* %0, %struct.ctx** %2, align 8
  %6 = load %struct.ctx*, %struct.ctx** %2, align 8
  %7 = getelementptr inbounds %struct.ctx, %struct.ctx* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  store i32 %8, i32* %3, align 4
  store i32 0, i32* %4, align 4
  br label %9

9:                                                ; preds = %26, %1
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* %3, align 4
  %12 = icmp ult i32 %10, %11
  br i1 %12, label %13, label %29

13:                                               ; preds = %9
  %14 = load %struct.ctx*, %struct.ctx** %2, align 8
  %15 = call i32 @getmin(%struct.ctx* %14)
  store i32 %15, i32* %5, align 4
  %16 = load %struct.ctx*, %struct.ctx** %2, align 8
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @setbit(%struct.ctx* %16, i32 %17)
  %19 = load i32, i32* %4, align 4
  %20 = load %struct.ctx*, %struct.ctx** %2, align 8
  %21 = getelementptr inbounds %struct.ctx, %struct.ctx* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = load i32, i32* %5, align 4
  %24 = zext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  store i32 %19, i32* %25, align 4
  br label %26

26:                                               ; preds = %13
  %27 = load i32, i32* %4, align 4
  %28 = add i32 %27, 1
  store i32 %28, i32* %4, align 4
  br label %9

29:                                               ; preds = %9
  ret void
}

declare dso_local i32 @getmin(%struct.ctx*) #1

declare dso_local i32 @setbit(%struct.ctx*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
